crates/wac-parser/tests/resolution/fail/mismatched-func-param-type.wac
import x: interface {
    resource r;
    f: func(r: string);
};

let i = new foo:bar { x };
